// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeApi deleteTree() 1: Delete existing tree FrodoTestTree2 1`] = `
{
  "_id": "FrodoTestTree2",
  "_rev": "1315154193",
  "description": "Frodo Test Tree Two",
  "enabled": true,
  "entryNodeId": "f19e5458-6c2e-43e6-9273-84d66f4a8f46",
  "identityResource": "managed/alpha_user",
  "innerTreeOnly": false,
  "nodes": {},
  "staticNodes": {
    "97704adc-c3a0-469a-9f6a-c07325890232": {
      "x": 210,
      "y": 80,
    },
    "c904b319-0bb0-454e-b408-08ade91469cf": {
      "x": 70,
      "y": 230,
    },
    "startNode": {
      "x": 70,
      "y": 80,
    },
  },
  "uiConfig": {
    "categories": "["Authentication","Frodo"]",
  },
}
`;

exports[`TreeApi deleteTree() 2: Delete non-existing tree DoesNotExist 1`] = `
{
  "code": 404,
  "message": "Not Found",
  "reason": "Not Found",
}
`;

exports[`TreeApi getTree() 1: Get existing tree FrodoTestTree1 1`] = `
{
  "_id": "FrodoTestTree1",
  "_rev": "285942726",
  "description": "Frodo Test Tree One",
  "enabled": true,
  "entryNodeId": "e301438c-0bd0-429c-ab0c-66126501069a",
  "identityResource": "managed/alpha_user",
  "innerTreeOnly": false,
  "nodes": {},
  "staticNodes": {
    "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
      "x": 70,
      "y": 230,
    },
    "e301438c-0bd0-429c-ab0c-66126501069a": {
      "x": 210,
      "y": 80,
    },
    "startNode": {
      "x": 70,
      "y": 80,
    },
  },
  "uiConfig": {
    "categories": "["Authentication","Frodo"]",
  },
}
`;

exports[`TreeApi getTree() 2: Get non-existing tree DoesNotExist 1`] = `
{
  "code": 404,
  "message": "Not Found",
  "reason": "Not Found",
}
`;

exports[`TreeApi getTrees() 1: Get all trees 1`] = `
{
  "pagedResultsCookie": null,
  "remainingPagedResults": -1,
  "result": [
    {
      "_id": "FrodoTestTree1",
      "_rev": "285942726",
      "description": "Frodo Test Tree One",
      "enabled": true,
      "entryNodeId": "e301438c-0bd0-429c-ab0c-66126501069a",
      "identityResource": "managed/alpha_user",
      "innerTreeOnly": false,
      "nodes": {},
      "staticNodes": {
        "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
          "x": 70,
          "y": 230,
        },
        "e301438c-0bd0-429c-ab0c-66126501069a": {
          "x": 210,
          "y": 80,
        },
        "startNode": {
          "x": 70,
          "y": 80,
        },
      },
      "uiConfig": {
        "categories": "["Authentication","Frodo"]",
      },
    },
    {
      "_id": "FrodoTestTree3",
      "_rev": "250665948",
      "description": "Frodo Test Tree Three",
      "enabled": true,
      "entryNodeId": "b320a71e-ddac-4180-a106-e6690ac775ca",
      "identityResource": "managed/alpha_user",
      "innerTreeOnly": false,
      "nodes": {},
      "staticNodes": {
        "1edf4a79-6103-48ee-af91-75af47f85870": {
          "x": 70,
          "y": 230,
        },
        "4bb0250d-40fe-4ab8-9ea4-77e901615736": {
          "x": 210,
          "y": 80,
        },
        "startNode": {
          "x": 70,
          "y": 80,
        },
      },
      "uiConfig": {
        "categories": "["Authentication","Frodo"]",
      },
    },
    {
      "_id": "FrodoTestTree2",
      "_rev": "1315154193",
      "description": "Frodo Test Tree Two",
      "enabled": true,
      "entryNodeId": "f19e5458-6c2e-43e6-9273-84d66f4a8f46",
      "identityResource": "managed/alpha_user",
      "innerTreeOnly": false,
      "nodes": {},
      "staticNodes": {
        "97704adc-c3a0-469a-9f6a-c07325890232": {
          "x": 210,
          "y": 80,
        },
        "c904b319-0bb0-454e-b408-08ade91469cf": {
          "x": 70,
          "y": 230,
        },
        "startNode": {
          "x": 70,
          "y": 80,
        },
      },
      "uiConfig": {
        "categories": "["Authentication","Frodo"]",
      },
    },
    {
      "_id": "j10",
      "_rev": "-1144362452",
      "enabled": true,
      "entryNodeId": "ccc8e0e1-86fc-4515-bc02-a3e11b07b933",
      "identityResource": "managed/alpha_user",
      "innerTreeOnly": false,
      "nodes": {
        "09e1d1e6-b388-448c-b5a6-00db52f826e7": {
          "connections": {
            "true": "53eaf2b6-6a93-4cf7-b8b9-788155d12ff2",
          },
          "displayName": "level",
          "nodeType": "ScriptedDecisionNode",
          "x": 395,
          "y": 345.015625,
        },
        "36cb348f-3b91-443b-a2ba-2e23c6446f49": {
          "connections": {
            "true": "53eaf2b6-6a93-4cf7-b8b9-788155d12ff2",
          },
          "displayName": "shared",
          "nodeType": "ScriptedDecisionNode",
          "x": 393,
          "y": 259.015625,
        },
        "53eaf2b6-6a93-4cf7-b8b9-788155d12ff2": {
          "connections": {
            "false": "e301438c-0bd0-429c-ab0c-66126501069a",
            "true": "e301438c-0bd0-429c-ab0c-66126501069a",
          },
          "displayName": "nest",
          "nodeType": "InnerTreeEvaluatorNode",
          "x": 816,
          "y": 233.015625,
        },
        "64c4e3ef-5cf3-4c6d-a3c1-367430b65ead": {
          "connections": {
            "true": "53eaf2b6-6a93-4cf7-b8b9-788155d12ff2",
          },
          "displayName": "level",
          "nodeType": "ScriptedDecisionNode",
          "x": 598,
          "y": 173.015625,
        },
        "aa5aebcf-131b-44f9-b596-f0805e1f4305": {
          "connections": {
            "true": "64c4e3ef-5cf3-4c6d-a3c1-367430b65ead",
          },
          "displayName": "shared",
          "nodeType": "ScriptedDecisionNode",
          "x": 392,
          "y": 173.015625,
        },
        "ccc8e0e1-86fc-4515-bc02-a3e11b07b933": {
          "connections": {
            "level only": "09e1d1e6-b388-448c-b5a6-00db52f826e7",
            "none": "53eaf2b6-6a93-4cf7-b8b9-788155d12ff2",
            "shared and level": "aa5aebcf-131b-44f9-b596-f0805e1f4305",
            "shared only": "36cb348f-3b91-443b-a2ba-2e23c6446f49",
          },
          "displayName": "mode",
          "nodeType": "ScriptedDecisionNode",
          "x": 167,
          "y": 210.015625,
        },
      },
      "staticNodes": {
        "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
          "x": 1236,
          "y": 145,
        },
        "e301438c-0bd0-429c-ab0c-66126501069a": {
          "x": 1236,
          "y": 253,
        },
        "startNode": {
          "x": 50,
          "y": 250,
        },
      },
      "uiConfig": {
        "categories": "[]",
      },
    },
    {
      "_id": "j01",
      "_rev": "41789699",
      "enabled": true,
      "entryNodeId": "b9c26251-9d4d-4499-b8e9-518f35111dbf",
      "identityResource": "managed/alpha_user",
      "innerTreeOnly": false,
      "nodes": {
        "7e975947-efba-4a50-97ea-7cbe3fbf7416": {
          "connections": {
            "true": "aa97f870-d95e-4861-b756-64b6423dd7da",
          },
          "displayName": "level",
          "nodeType": "ScriptedDecisionNode",
          "x": 395,
          "y": 345.015625,
        },
        "aa97f870-d95e-4861-b756-64b6423dd7da": {
          "connections": {
            "false": "e301438c-0bd0-429c-ab0c-66126501069a",
            "true": "e301438c-0bd0-429c-ab0c-66126501069a",
          },
          "displayName": "nest",
          "nodeType": "InnerTreeEvaluatorNode",
          "x": 816,
          "y": 233.015625,
        },
        "b9c26251-9d4d-4499-b8e9-518f35111dbf": {
          "connections": {
            "level only": "7e975947-efba-4a50-97ea-7cbe3fbf7416",
            "none": "aa97f870-d95e-4861-b756-64b6423dd7da",
            "shared and level": "fa62ae77-1e86-4939-a773-e428259fac97",
            "shared only": "ba0ed11d-850f-4b4a-81bc-0d4ad07736df",
          },
          "displayName": "mode",
          "nodeType": "ScriptedDecisionNode",
          "x": 167,
          "y": 210.015625,
        },
        "ba0ed11d-850f-4b4a-81bc-0d4ad07736df": {
          "connections": {
            "true": "aa97f870-d95e-4861-b756-64b6423dd7da",
          },
          "displayName": "shared",
          "nodeType": "ScriptedDecisionNode",
          "x": 393,
          "y": 259.015625,
        },
        "d2c7ef78-6b25-40d6-b58e-6ddca3c1f787": {
          "connections": {
            "true": "aa97f870-d95e-4861-b756-64b6423dd7da",
          },
          "displayName": "level",
          "nodeType": "ScriptedDecisionNode",
          "x": 598,
          "y": 173.015625,
        },
        "fa62ae77-1e86-4939-a773-e428259fac97": {
          "connections": {
            "true": "d2c7ef78-6b25-40d6-b58e-6ddca3c1f787",
          },
          "displayName": "shared",
          "nodeType": "ScriptedDecisionNode",
          "x": 392,
          "y": 173.015625,
        },
      },
      "staticNodes": {
        "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
          "x": 1236,
          "y": 145,
        },
        "e301438c-0bd0-429c-ab0c-66126501069a": {
          "x": 1236,
          "y": 253,
        },
        "startNode": {
          "x": 50,
          "y": 250,
        },
      },
      "uiConfig": {
        "categories": "[]",
      },
    },
    {
      "_id": "j00",
      "_rev": "-1046982804",
      "enabled": true,
      "entryNodeId": "240d83a3-2268-4ae1-9c20-30b65be6adab",
      "identityResource": "managed/alpha_user",
      "innerTreeOnly": false,
      "nodes": {
        "1e0789eb-3394-4f7d-9db4-f06cb4d71eab": {
          "connections": {
            "true": "b787efaf-f1a6-433a-8194-85b7c3df9c07",
          },
          "displayName": "shared",
          "nodeType": "ScriptedDecisionNode",
          "x": 392,
          "y": 173.015625,
        },
        "240d83a3-2268-4ae1-9c20-30b65be6adab": {
          "connections": {
            "level only": "2a9c577f-402a-4fba-94f7-ccf7c479553b",
            "none": "d1c184a0-5fbb-45a0-b0aa-36932833814c",
            "shared and level": "1e0789eb-3394-4f7d-9db4-f06cb4d71eab",
            "shared only": "d481e647-675e-4d0e-9bd3-dd4d41b7fc2a",
          },
          "displayName": "mode",
          "nodeType": "ScriptedDecisionNode",
          "x": 167,
          "y": 210.015625,
        },
        "2a9c577f-402a-4fba-94f7-ccf7c479553b": {
          "connections": {
            "true": "d1c184a0-5fbb-45a0-b0aa-36932833814c",
          },
          "displayName": "level",
          "nodeType": "ScriptedDecisionNode",
          "x": 395,
          "y": 345.015625,
        },
        "b787efaf-f1a6-433a-8194-85b7c3df9c07": {
          "connections": {
            "true": "d1c184a0-5fbb-45a0-b0aa-36932833814c",
          },
          "displayName": "level",
          "nodeType": "ScriptedDecisionNode",
          "x": 598,
          "y": 173.015625,
        },
        "d1c184a0-5fbb-45a0-b0aa-36932833814c": {
          "connections": {
            "true": "e301438c-0bd0-429c-ab0c-66126501069a",
          },
          "displayName": "debug",
          "nodeType": "ScriptedDecisionNode",
          "x": 1033,
          "y": 261.015625,
        },
        "d481e647-675e-4d0e-9bd3-dd4d41b7fc2a": {
          "connections": {
            "true": "d1c184a0-5fbb-45a0-b0aa-36932833814c",
          },
          "displayName": "shared",
          "nodeType": "ScriptedDecisionNode",
          "x": 393,
          "y": 259.015625,
        },
      },
      "staticNodes": {
        "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
          "x": 1236,
          "y": 145,
        },
        "e301438c-0bd0-429c-ab0c-66126501069a": {
          "x": 1236,
          "y": 253,
        },
        "startNode": {
          "x": 50,
          "y": 250,
        },
      },
      "uiConfig": {
        "categories": "[]",
      },
    },
    {
      "_id": "j03",
      "_rev": "-136651648",
      "enabled": true,
      "entryNodeId": "ffc4902e-5d39-4006-85d4-263792cbf12b",
      "identityResource": "managed/alpha_user",
      "innerTreeOnly": false,
      "nodes": {
        "40b880dd-fae5-4618-8a5a-15f096a1bd31": {
          "connections": {
            "true": "da18dc78-fbb4-488c-bcc0-dfec4d6f9ee1",
          },
          "displayName": "shared",
          "nodeType": "ScriptedDecisionNode",
          "x": 393,
          "y": 259.015625,
        },
        "789a5583-b8eb-4d0a-92ae-ac0a83e7e2ad": {
          "connections": {
            "true": "8fb91c4d-de64-49d8-83dc-7c03b7899613",
          },
          "displayName": "shared",
          "nodeType": "ScriptedDecisionNode",
          "x": 392,
          "y": 173.015625,
        },
        "8fb91c4d-de64-49d8-83dc-7c03b7899613": {
          "connections": {
            "true": "da18dc78-fbb4-488c-bcc0-dfec4d6f9ee1",
          },
          "displayName": "level",
          "nodeType": "ScriptedDecisionNode",
          "x": 598,
          "y": 173.015625,
        },
        "da18dc78-fbb4-488c-bcc0-dfec4d6f9ee1": {
          "connections": {
            "false": "e301438c-0bd0-429c-ab0c-66126501069a",
            "true": "e301438c-0bd0-429c-ab0c-66126501069a",
          },
          "displayName": "nest",
          "nodeType": "InnerTreeEvaluatorNode",
          "x": 816,
          "y": 233.015625,
        },
        "da4c931c-ed4e-4451-9e7a-239a66f5bdf6": {
          "connections": {
            "true": "da18dc78-fbb4-488c-bcc0-dfec4d6f9ee1",
          },
          "displayName": "level",
          "nodeType": "ScriptedDecisionNode",
          "x": 395,
          "y": 345.015625,
        },
        "ffc4902e-5d39-4006-85d4-263792cbf12b": {
          "connections": {
            "level only": "da4c931c-ed4e-4451-9e7a-239a66f5bdf6",
            "none": "da18dc78-fbb4-488c-bcc0-dfec4d6f9ee1",
            "shared and level": "789a5583-b8eb-4d0a-92ae-ac0a83e7e2ad",
            "shared only": "40b880dd-fae5-4618-8a5a-15f096a1bd31",
          },
          "displayName": "mode",
          "nodeType": "ScriptedDecisionNode",
          "x": 167,
          "y": 210.015625,
        },
      },
      "staticNodes": {
        "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
          "x": 1236,
          "y": 145,
        },
        "e301438c-0bd0-429c-ab0c-66126501069a": {
          "x": 1236,
          "y": 253,
        },
        "startNode": {
          "x": 50,
          "y": 250,
        },
      },
      "uiConfig": {
        "categories": "[]",
      },
    },
    {
      "_id": "j02",
      "_rev": "-785066246",
      "enabled": true,
      "entryNodeId": "33791a7d-d14a-460f-806b-5fc3113a1e13",
      "identityResource": "managed/alpha_user",
      "innerTreeOnly": false,
      "nodes": {
        "1fafe9cd-4a2e-42b9-b326-ea1a94325a40": {
          "connections": {
            "true": "f192e72d-aa85-447b-af66-592a60f0c6c0",
          },
          "displayName": "shared",
          "nodeType": "ScriptedDecisionNode",
          "x": 393,
          "y": 259.015625,
        },
        "33791a7d-d14a-460f-806b-5fc3113a1e13": {
          "connections": {
            "level only": "4ee0bb06-5335-403e-810b-72d574247dfe",
            "none": "f192e72d-aa85-447b-af66-592a60f0c6c0",
            "shared and level": "a679285d-8718-4db3-ba08-e743ab7eb086",
            "shared only": "1fafe9cd-4a2e-42b9-b326-ea1a94325a40",
          },
          "displayName": "mode",
          "nodeType": "ScriptedDecisionNode",
          "x": 167,
          "y": 210.015625,
        },
        "4ee0bb06-5335-403e-810b-72d574247dfe": {
          "connections": {
            "true": "f192e72d-aa85-447b-af66-592a60f0c6c0",
          },
          "displayName": "level",
          "nodeType": "ScriptedDecisionNode",
          "x": 395,
          "y": 345.015625,
        },
        "5e6d7b3b-e381-4395-ba18-ca807b6adb48": {
          "connections": {
            "true": "f192e72d-aa85-447b-af66-592a60f0c6c0",
          },
          "displayName": "level",
          "nodeType": "ScriptedDecisionNode",
          "x": 598,
          "y": 173.015625,
        },
        "a679285d-8718-4db3-ba08-e743ab7eb086": {
          "connections": {
            "true": "5e6d7b3b-e381-4395-ba18-ca807b6adb48",
          },
          "displayName": "shared",
          "nodeType": "ScriptedDecisionNode",
          "x": 392,
          "y": 173.015625,
        },
        "f192e72d-aa85-447b-af66-592a60f0c6c0": {
          "connections": {
            "false": "e301438c-0bd0-429c-ab0c-66126501069a",
            "true": "e301438c-0bd0-429c-ab0c-66126501069a",
          },
          "displayName": "nest",
          "nodeType": "InnerTreeEvaluatorNode",
          "x": 816,
          "y": 233.015625,
        },
      },
      "staticNodes": {
        "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
          "x": 1236,
          "y": 145,
        },
        "e301438c-0bd0-429c-ab0c-66126501069a": {
          "x": 1236,
          "y": 253,
        },
        "startNode": {
          "x": 50,
          "y": 250,
        },
      },
      "uiConfig": {
        "categories": "[]",
      },
    },
    {
      "_id": "j05",
      "_rev": "1864564919",
      "enabled": true,
      "entryNodeId": "327eb877-019d-4ef6-9b17-a024fea0c71e",
      "identityResource": "managed/alpha_user",
      "innerTreeOnly": false,
      "nodes": {
        "327eb877-019d-4ef6-9b17-a024fea0c71e": {
          "connections": {
            "level only": "cb490a79-245e-4876-a1a0-f507ac9c1553",
            "none": "cf10428f-0bb6-48c4-9926-96604c43da05",
            "shared and level": "95af6abc-623d-4580-bda5-152c19949c96",
            "shared only": "84d09172-2001-4e49-aad7-d8913fa27ff7",
          },
          "displayName": "mode",
          "nodeType": "ScriptedDecisionNode",
          "x": 167,
          "y": 210.015625,
        },
        "84d09172-2001-4e49-aad7-d8913fa27ff7": {
          "connections": {
            "true": "cf10428f-0bb6-48c4-9926-96604c43da05",
          },
          "displayName": "shared",
          "nodeType": "ScriptedDecisionNode",
          "x": 393,
          "y": 259.015625,
        },
        "95af6abc-623d-4580-bda5-152c19949c96": {
          "connections": {
            "true": "a8f93777-948d-4efd-a76b-c44bc925d84e",
          },
          "displayName": "shared",
          "nodeType": "ScriptedDecisionNode",
          "x": 392,
          "y": 173.015625,
        },
        "a8f93777-948d-4efd-a76b-c44bc925d84e": {
          "connections": {
            "true": "cf10428f-0bb6-48c4-9926-96604c43da05",
          },
          "displayName": "level",
          "nodeType": "ScriptedDecisionNode",
          "x": 598,
          "y": 173.015625,
        },
        "cb490a79-245e-4876-a1a0-f507ac9c1553": {
          "connections": {
            "true": "cf10428f-0bb6-48c4-9926-96604c43da05",
          },
          "displayName": "level",
          "nodeType": "ScriptedDecisionNode",
          "x": 395,
          "y": 345.015625,
        },
        "cf10428f-0bb6-48c4-9926-96604c43da05": {
          "connections": {
            "false": "e301438c-0bd0-429c-ab0c-66126501069a",
            "true": "e301438c-0bd0-429c-ab0c-66126501069a",
          },
          "displayName": "nest",
          "nodeType": "InnerTreeEvaluatorNode",
          "x": 816,
          "y": 232.015625,
        },
      },
      "staticNodes": {
        "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
          "x": 1236,
          "y": 145,
        },
        "e301438c-0bd0-429c-ab0c-66126501069a": {
          "x": 1236,
          "y": 253,
        },
        "startNode": {
          "x": 50,
          "y": 250,
        },
      },
      "uiConfig": {
        "categories": "[]",
      },
    },
    {
      "_id": "j04",
      "_rev": "-37810069",
      "enabled": true,
      "entryNodeId": "a3a5259d-07be-4ff3-a62d-82da3be53383",
      "identityResource": "managed/alpha_user",
      "innerTreeOnly": false,
      "nodes": {
        "1ab9abc3-5b0f-4eff-bbdd-4cb03eed55d7": {
          "connections": {
            "false": "e301438c-0bd0-429c-ab0c-66126501069a",
            "true": "e301438c-0bd0-429c-ab0c-66126501069a",
          },
          "displayName": "nest",
          "nodeType": "InnerTreeEvaluatorNode",
          "x": 816,
          "y": 233.015625,
        },
        "31b2f947-d118-4593-9037-47631e4c6362": {
          "connections": {
            "true": "1ab9abc3-5b0f-4eff-bbdd-4cb03eed55d7",
          },
          "displayName": "level",
          "nodeType": "ScriptedDecisionNode",
          "x": 598,
          "y": 173.015625,
        },
        "a3a5259d-07be-4ff3-a62d-82da3be53383": {
          "connections": {
            "level only": "a5cf5d6f-4a80-4d3f-86da-b1a0f32a167c",
            "none": "1ab9abc3-5b0f-4eff-bbdd-4cb03eed55d7",
            "shared and level": "f2728a6b-f6c3-4b17-a967-a8dd9d7af81b",
            "shared only": "a899b13d-1bd0-4b52-b06b-68f6f6a3ded2",
          },
          "displayName": "mode",
          "nodeType": "ScriptedDecisionNode",
          "x": 167,
          "y": 210.015625,
        },
        "a5cf5d6f-4a80-4d3f-86da-b1a0f32a167c": {
          "connections": {
            "true": "1ab9abc3-5b0f-4eff-bbdd-4cb03eed55d7",
          },
          "displayName": "level",
          "nodeType": "ScriptedDecisionNode",
          "x": 395,
          "y": 345.015625,
        },
        "a899b13d-1bd0-4b52-b06b-68f6f6a3ded2": {
          "connections": {
            "true": "1ab9abc3-5b0f-4eff-bbdd-4cb03eed55d7",
          },
          "displayName": "shared",
          "nodeType": "ScriptedDecisionNode",
          "x": 393,
          "y": 259.015625,
        },
        "f2728a6b-f6c3-4b17-a967-a8dd9d7af81b": {
          "connections": {
            "true": "31b2f947-d118-4593-9037-47631e4c6362",
          },
          "displayName": "shared",
          "nodeType": "ScriptedDecisionNode",
          "x": 392,
          "y": 173.015625,
        },
      },
      "staticNodes": {
        "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
          "x": 1236,
          "y": 145,
        },
        "e301438c-0bd0-429c-ab0c-66126501069a": {
          "x": 1236,
          "y": 253,
        },
        "startNode": {
          "x": 50,
          "y": 250,
        },
      },
      "uiConfig": {
        "categories": "[]",
      },
    },
    {
      "_id": "j07",
      "_rev": "1923718438",
      "enabled": true,
      "entryNodeId": "85bf5f29-709e-42bb-939e-6c7bc8e710ac",
      "identityResource": "managed/alpha_user",
      "innerTreeOnly": false,
      "nodes": {
        "0242464d-58bb-46d3-bf41-ec0157ba8720": {
          "connections": {
            "true": "57182fc1-789a-49d0-ba08-3d3f39202daf",
          },
          "displayName": "shared",
          "nodeType": "ScriptedDecisionNode",
          "x": 393,
          "y": 259.015625,
        },
        "57182fc1-789a-49d0-ba08-3d3f39202daf": {
          "connections": {
            "false": "e301438c-0bd0-429c-ab0c-66126501069a",
            "true": "e301438c-0bd0-429c-ab0c-66126501069a",
          },
          "displayName": "nest",
          "nodeType": "InnerTreeEvaluatorNode",
          "x": 816,
          "y": 232.015625,
        },
        "85bf5f29-709e-42bb-939e-6c7bc8e710ac": {
          "connections": {
            "level only": "af0f2180-6077-42d5-bad6-a238d351e6db",
            "none": "57182fc1-789a-49d0-ba08-3d3f39202daf",
            "shared and level": "9b48d3b0-36fd-47ca-8ef0-26a6b00e9280",
            "shared only": "0242464d-58bb-46d3-bf41-ec0157ba8720",
          },
          "displayName": "mode",
          "nodeType": "ScriptedDecisionNode",
          "x": 167,
          "y": 210.015625,
        },
        "9b48d3b0-36fd-47ca-8ef0-26a6b00e9280": {
          "connections": {
            "true": "dad45c04-3d86-4e3a-b5c3-34e89719f705",
          },
          "displayName": "shared",
          "nodeType": "ScriptedDecisionNode",
          "x": 392,
          "y": 173.015625,
        },
        "af0f2180-6077-42d5-bad6-a238d351e6db": {
          "connections": {
            "true": "57182fc1-789a-49d0-ba08-3d3f39202daf",
          },
          "displayName": "level",
          "nodeType": "ScriptedDecisionNode",
          "x": 395,
          "y": 345.015625,
        },
        "dad45c04-3d86-4e3a-b5c3-34e89719f705": {
          "connections": {
            "true": "57182fc1-789a-49d0-ba08-3d3f39202daf",
          },
          "displayName": "level",
          "nodeType": "ScriptedDecisionNode",
          "x": 598,
          "y": 173.015625,
        },
      },
      "staticNodes": {
        "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
          "x": 1236,
          "y": 145,
        },
        "e301438c-0bd0-429c-ab0c-66126501069a": {
          "x": 1236,
          "y": 253,
        },
        "startNode": {
          "x": 50,
          "y": 250,
        },
      },
      "uiConfig": {
        "categories": "[]",
      },
    },
    {
      "_id": "j06",
      "_rev": "-1392838639",
      "enabled": true,
      "entryNodeId": "a70d6f30-ffa8-4c77-851e-2d71fd601fa2",
      "identityResource": "managed/alpha_user",
      "innerTreeOnly": false,
      "nodes": {
        "049f1e8b-2d7b-40e5-8bb9-4bf373e515c0": {
          "connections": {
            "true": "708467b1-f201-40f6-a0ba-33148defec5d",
          },
          "displayName": "shared",
          "nodeType": "ScriptedDecisionNode",
          "x": 393,
          "y": 259.015625,
        },
        "53169a16-1d53-4188-8342-83200849303f": {
          "connections": {
            "true": "708467b1-f201-40f6-a0ba-33148defec5d",
          },
          "displayName": "level",
          "nodeType": "ScriptedDecisionNode",
          "x": 395,
          "y": 345.015625,
        },
        "708467b1-f201-40f6-a0ba-33148defec5d": {
          "connections": {
            "false": "e301438c-0bd0-429c-ab0c-66126501069a",
            "true": "e301438c-0bd0-429c-ab0c-66126501069a",
          },
          "displayName": "nest",
          "nodeType": "InnerTreeEvaluatorNode",
          "x": 816,
          "y": 232.015625,
        },
        "a70d6f30-ffa8-4c77-851e-2d71fd601fa2": {
          "connections": {
            "level only": "53169a16-1d53-4188-8342-83200849303f",
            "none": "708467b1-f201-40f6-a0ba-33148defec5d",
            "shared and level": "c9f349aa-17da-4e3a-80d5-8d28c4fd86b1",
            "shared only": "049f1e8b-2d7b-40e5-8bb9-4bf373e515c0",
          },
          "displayName": "mode",
          "nodeType": "ScriptedDecisionNode",
          "x": 167,
          "y": 210.015625,
        },
        "c9f349aa-17da-4e3a-80d5-8d28c4fd86b1": {
          "connections": {
            "true": "ccabe192-8f7a-4cf2-8a9d-dec9076d910a",
          },
          "displayName": "shared",
          "nodeType": "ScriptedDecisionNode",
          "x": 392,
          "y": 173.015625,
        },
        "ccabe192-8f7a-4cf2-8a9d-dec9076d910a": {
          "connections": {
            "true": "708467b1-f201-40f6-a0ba-33148defec5d",
          },
          "displayName": "level",
          "nodeType": "ScriptedDecisionNode",
          "x": 598,
          "y": 173.015625,
        },
      },
      "staticNodes": {
        "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
          "x": 1236,
          "y": 145,
        },
        "e301438c-0bd0-429c-ab0c-66126501069a": {
          "x": 1236,
          "y": 253,
        },
        "startNode": {
          "x": 50,
          "y": 250,
        },
      },
      "uiConfig": {
        "categories": "[]",
      },
    },
    {
      "_id": "j09",
      "_rev": "1907157793",
      "enabled": true,
      "entryNodeId": "06794f50-9356-492c-bd46-2662d68dfc53",
      "identityResource": "managed/alpha_user",
      "innerTreeOnly": false,
      "nodes": {
        "06794f50-9356-492c-bd46-2662d68dfc53": {
          "connections": {
            "level only": "e3303783-9734-42ec-88c5-a7a627427059",
            "none": "553fd963-ba44-409c-a9fb-36f8cc5ca6b8",
            "shared and level": "61ea0d1e-2ec3-47ba-8c9c-319a60a9cbde",
            "shared only": "4d9ceac3-0de2-48e6-9547-562de6a0b180",
          },
          "displayName": "mode",
          "nodeType": "ScriptedDecisionNode",
          "x": 167,
          "y": 210.015625,
        },
        "4d9ceac3-0de2-48e6-9547-562de6a0b180": {
          "connections": {
            "true": "553fd963-ba44-409c-a9fb-36f8cc5ca6b8",
          },
          "displayName": "shared",
          "nodeType": "ScriptedDecisionNode",
          "x": 393,
          "y": 259.015625,
        },
        "553fd963-ba44-409c-a9fb-36f8cc5ca6b8": {
          "connections": {
            "false": "e301438c-0bd0-429c-ab0c-66126501069a",
            "true": "e301438c-0bd0-429c-ab0c-66126501069a",
          },
          "displayName": "nest",
          "nodeType": "InnerTreeEvaluatorNode",
          "x": 816,
          "y": 233.015625,
        },
        "61ea0d1e-2ec3-47ba-8c9c-319a60a9cbde": {
          "connections": {
            "true": "aad50ee1-c4dd-4bb7-a403-bb6f60dbf058",
          },
          "displayName": "shared",
          "nodeType": "ScriptedDecisionNode",
          "x": 392,
          "y": 173.015625,
        },
        "aad50ee1-c4dd-4bb7-a403-bb6f60dbf058": {
          "connections": {
            "true": "553fd963-ba44-409c-a9fb-36f8cc5ca6b8",
          },
          "displayName": "level",
          "nodeType": "ScriptedDecisionNode",
          "x": 598,
          "y": 173.015625,
        },
        "e3303783-9734-42ec-88c5-a7a627427059": {
          "connections": {
            "true": "553fd963-ba44-409c-a9fb-36f8cc5ca6b8",
          },
          "displayName": "level",
          "nodeType": "ScriptedDecisionNode",
          "x": 395,
          "y": 345.015625,
        },
      },
      "staticNodes": {
        "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
          "x": 1236,
          "y": 145,
        },
        "e301438c-0bd0-429c-ab0c-66126501069a": {
          "x": 1236,
          "y": 253,
        },
        "startNode": {
          "x": 50,
          "y": 250,
        },
      },
      "uiConfig": {
        "categories": "[]",
      },
    },
    {
      "_id": "j08",
      "_rev": "799015453",
      "enabled": true,
      "entryNodeId": "1ac726e7-e46d-4521-a65e-00c71951dd5b",
      "identityResource": "managed/alpha_user",
      "innerTreeOnly": false,
      "nodes": {
        "1ac726e7-e46d-4521-a65e-00c71951dd5b": {
          "connections": {
            "level only": "875be2ae-0926-43ee-b742-ef75e4235015",
            "none": "c9e13651-7c3f-4cd8-8245-c9dd09672069",
            "shared and level": "f9802f38-14cd-4a2e-a7a1-2e6c4d0fb6e2",
            "shared only": "b524e828-573e-40c1-aef6-84abfec262c2",
          },
          "displayName": "mode",
          "nodeType": "ScriptedDecisionNode",
          "x": 167,
          "y": 210.015625,
        },
        "875be2ae-0926-43ee-b742-ef75e4235015": {
          "connections": {
            "true": "c9e13651-7c3f-4cd8-8245-c9dd09672069",
          },
          "displayName": "level",
          "nodeType": "ScriptedDecisionNode",
          "x": 395,
          "y": 345.015625,
        },
        "b524e828-573e-40c1-aef6-84abfec262c2": {
          "connections": {
            "true": "c9e13651-7c3f-4cd8-8245-c9dd09672069",
          },
          "displayName": "shared",
          "nodeType": "ScriptedDecisionNode",
          "x": 393,
          "y": 259.015625,
        },
        "b5a9be22-512b-402c-960d-c4c8b1f32cfa": {
          "connections": {
            "true": "c9e13651-7c3f-4cd8-8245-c9dd09672069",
          },
          "displayName": "level",
          "nodeType": "ScriptedDecisionNode",
          "x": 598,
          "y": 173.015625,
        },
        "c9e13651-7c3f-4cd8-8245-c9dd09672069": {
          "connections": {
            "false": "e301438c-0bd0-429c-ab0c-66126501069a",
            "true": "e301438c-0bd0-429c-ab0c-66126501069a",
          },
          "displayName": "nest",
          "nodeType": "InnerTreeEvaluatorNode",
          "x": 816,
          "y": 232.015625,
        },
        "f9802f38-14cd-4a2e-a7a1-2e6c4d0fb6e2": {
          "connections": {
            "true": "b5a9be22-512b-402c-960d-c4c8b1f32cfa",
          },
          "displayName": "shared",
          "nodeType": "ScriptedDecisionNode",
          "x": 392,
          "y": 173.015625,
        },
      },
      "staticNodes": {
        "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
          "x": 1236,
          "y": 145,
        },
        "e301438c-0bd0-429c-ab0c-66126501069a": {
          "x": 1236,
          "y": 253,
        },
        "startNode": {
          "x": 50,
          "y": 250,
        },
      },
      "uiConfig": {
        "categories": "[]",
      },
    },
  ],
  "resultCount": 14,
  "totalPagedResults": -1,
  "totalPagedResultsPolicy": "NONE",
}
`;

exports[`TreeApi putTree() 1: Put valid tree FrodoTestTree4 1`] = `
{
  "_id": "FrodoTestTree4",
  "_rev": "-1787486550",
  "description": "Frodo Test Tree Four",
  "enabled": true,
  "entryNodeId": "f3bea587-d5ad-476b-80bb-b288ab45bc52",
  "identityResource": "managed/alpha_user",
  "innerTreeOnly": false,
  "nodes": {},
  "staticNodes": {
    "be2da6e2-ca86-4c4a-9252-5df7ea0551be": {
      "x": 210,
      "y": 80,
    },
    "e6b2ead4-7cb2-4f6f-b9ef-f2086a3814dd": {
      "x": 70,
      "y": 230,
    },
    "startNode": {
      "x": 70,
      "y": 80,
    },
  },
  "uiConfig": {
    "categories": "["Authentication","Frodo"]",
  },
}
`;

exports[`TreeApi putTree() 2: Put invalid tree [trailing data] 1`] = `
{
  "Strict-Transport-Security": "max-age=31536000; includeSubDomains; preload;",
  "code": 400,
  "detail": ""{\\"_id\\":\\"Invalid\\",\\"entryNodeId\\":\\"e301438c-0bd0-429c-ab0c-66126501069a\\",\\"nodes\\":{},\\"staticNodes\\":{},\\"description\\":\\"invalid tree def\\",\\"identityResource\\":\\"managed/alpha_user\\",\\"uiConfig\\":{\\"categories\\":\\"[]\\"}}\\ntrailing data"",
  "message": "The request could not be processed because the provided content is not valid JSON",
  "reason": "Bad Request",
}
`;

exports[`TreeApi putTree() 3: Put invalid tree [invalid attribute] 1`] = `
{
  "code": 400,
  "detail": {
    "validAttributes": [
      "description",
      "enabled",
      "entryNodeId",
      "identityResource",
      "innerTreeOnly",
      "nodes",
      "staticNodes",
      "uiConfig",
    ],
  },
  "message": "Invalid attribute specified.",
  "reason": "Bad Request",
}
`;

exports[`TreeApi putTree() 4: Put invalid tree [no entry node] 1`] = `
{
  "code": 400,
  "message": "Node with ID entryNodeId must exist in the tree.",
  "reason": "Bad Request",
}
`;

exports[`TreeApi putTree() 5: Put invalid tree [invalid nodes] 1`] = `
{
  "code": 400,
  "message": "Data validation failed for the attribute, Nodes",
  "reason": "Bad Request",
}
`;
